--- a/pages/addressBookView.html
+++ b/pages/addressBookView.html
@@ -15,20 +15,20 @@
     <div class="logo-content">
       <img src="../assets/images/logo.png" alt="logo">
       <div>
-        <span class="emp-text">ADDRESS</span><br>
-        <span class="emp-text emp-payroll">BOOK</span>
+        <span class="address-text">ADDRESS</span><br>
+        <span class="address-text book-text">BOOK</span>
       </div>
     </div>
   </header>
 
   <div class="main-content">
-    <div class="header-content employee-header">
-      <div class="emp-detail-text">
-       Address Book
+    <div class="header-content address-header">
+      <div class="address-detail-text">
+       Person Details
         <div class="emp-count">10</div>
       </div>
       <a href="../pages/addressBook.html" class="add-button">
-      <img src="../assets/icons/add-24px.svg" alt="">Add User  
+      <img src="../assets/icons/add-24px.svg" alt="">Add Person  
       </a>
     </div>
 
@@ -38,8 +38,9 @@
       </table>
     </div>
   </div>
-  <script defer src="../js/addressBookView.js"></script>
-  
-</body>
 
+  <script defer src="../js/addressBookView.js"></script>
+  <script defer src="../js/site_properties.js"></script>
+
+</body>
 </html>
